Fix vertical hexagon spacing in blog sidebar

--- a/client/common/sass/blog/_category-list.sass
+++ b/client/common/sass/blog/_category-list.sass
@@ -3,10 +3,14 @@
 	// should be 1/2 of the margin left on the release
 	padding-left: 0.5rem
 
+.category-list__hexagon-wrapper
+	flex-shrink: 0
+
 .category-list__hexagon
+	position: relative
 	width: 1rem
 	height: auto
-	flex-shrink: 0
+	top: 3px
 
 .category-list__item
 	display: flex
